# HDIMS

./: .env  HDIMS_Project_Guide.md  README.md  app.py  create_sample_data.py  data_structures.py  index.html  init_data.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py  utils.py
attached_assets/: Pasted-I-want-to-build-a-full-stack-Health-Data-Information-Management-System-HDIMS-with-the-following--1747556526001.txt
backend/: CMakeLists.txt  auth.cpp  auth.h  build.sh  config.h  data_manager.cpp  data_manager.h  database.cpp  database.h  graph.h  main.cpp  priority_queue.h  routes.cpp  routes.h  segment_tree.h  trie.h  verify_token.py
css/: styles.css
js/: admin.js  auth.js  doctor.js  dsa-implementations.js  firebase-config.js  main.js  patient.js  utils.js
pages/: admin-dashboard.html  doctor-dashboard.html  dsa-demo.html  patient-dashboard.html
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  admin_register.html  base.html  doctor_register.html  index.html  login.html  register.html
templates/admin/: analytics.html  dashboard.html  users.html
templates/doctor/: appointments.html  dashboard.html  patient_medical_records.html  patients.html  profile.html  schedule.html
templates/patient/: appointments.html  book_appointment.html  dashboard.html  medical_records.html  profile.html
